objects/AcctSeed__Bank_Reconciliation2__c/AcctSeed__Bank_Reconciliation2__c.object-meta.xml
<CustomObject>
    <description>Used to document all aggregate bank reconciliation activity for a defined period. This includes detail information such as outstanding and cleared deposit and disbursement activity.</description>
    <label>Bank Reconciliation</label>
    <nameField>
        <displayFormat>BR-{00000}</displayFormat>
        <label>Bank Reconciliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>