objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Bank_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The bank or credit card account which will be reconciled. Only source records associated with this bank or credit card account will be associated with this bank reconciliation record.</inlineHelpText>
    <label>Bank/Credit Card Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Bank__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Bank Reconciliations</relationshipLabel>
    <relationshipName>Bank_Reconciliations1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>