objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Beginning_Balance__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Beginning_Balance__c</fullName>
    <description>Auto-populates upon creation or upon setting status to ‘Completed’ with the cleared balance from the prior bank reconciliation. If Override Beginning Balance checkbox is checked, then will not update upon setting status to ‘Completed’.</description>
    <inlineHelpText>Auto-fills with cleared balance of the prior reconciliation upon creation or upon changing the status to ‘Completed’. Can be input manually using Override Beginning Balance checkbox.</inlineHelpText>
    <label>Beginning Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>