objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Calculated_Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Calculated_Ending_Balance__c</fullName>
    <formula>IF(ISPICKVAL(AcctSeed__Type__c , &apos;Credit Card&apos;)
, AcctSeed__Beginning_Balance__c - AcctSeed__Cleared_Deposits__c + AcctSeed__Cleared_Disbursements__c
, AcctSeed__Beginning_Balance__c + AcctSeed__Cleared_Deposits__c - AcctSeed__Cleared_Disbursements__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If bank, calculated as beginning balance + cleared deposits bank - cleared payments. If credit card, calculated as beginning balance - cleared payments + cleared charges.</inlineHelpText>
    <label>Cleared Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>