objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Cleared_Deposits__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Cleared_Deposits__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Shall sum the total cleared cash receipts, bank deposits and debit journal entry lines on the associated bank reconciliation record.</description>
    <inlineHelpText>The sum of the cleared incoming funds (bank) or payments (credit card) on this bank reconciliation. This includes all cleared cash receipts, bank deposits and debit journal entry lines.</inlineHelpText>
    <label>Cleared Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>