objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__End_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__End_Date__c</fullName>
    <description>This date used in the query criteria for populating the Clear/Unclear table. Should always be the as-of date to be reconciled.</description>
    <inlineHelpText>The end date per the financial institution statement.</inlineHelpText>
    <label>Statement Ending Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>