objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Error__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Error__c</fullName>
    <inlineHelpText>Used to hold any error messages encountered while transitioning from In Progress to Completed.</inlineHelpText>
    <label>Error</label>
    <type>TextArea</type>
</CustomField>