objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__GL_Difference__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GL_Difference__c</fullName>
    <formula>AcctSeed__GL_Ending_Balance__c - AcctSeed__Calculated_GL_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between the calculated balance and the GL ending balance. Should be zero when status is completed.</inlineHelpText>
    <label>GL Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>