objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__GL_Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GL_Ending_Balance__c</fullName>
    <inlineHelpText>The ending balance of the bank account or credit card GL account per the general ledger as of the statement ending date.</inlineHelpText>
    <label>GL Ending Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>