objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Modern_BR__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Modern_BR__c</fullName>
    <defaultValue>true</defaultValue>
    <description>System field to identify bank reconciliations created using the modern BR process vs pre-existing bank reconciliations that do not function with modern bank reconciliation functionality.</description>
    <inlineHelpText>Bank reconciliations with this flag set to unchecked are those that exist prior to the modern BR process and do not function with the modern BR process functionality.</inlineHelpText>
    <label>Modern BR</label>
    <type>Checkbox</type>
</CustomField>