objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Start_Date__c</fullName>
    <description>This date field is no longer used.</description>
    <inlineHelpText>This date field is no longer used.</inlineHelpText>
    <label>Statement Start Date</label>
    <type>Date</type>
</CustomField>