objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Type__c</fullName>
    <description>Sets the display format and calculation. Bank = +Cash In, - Cash Out. Credit Card = - Cash In, + Cash Out.</description>
    <inlineHelpText>The type of financial institution account you are reconciling.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>