objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Uncleared_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Uncleared_Amount__c</fullName>
    <formula>AcctSeed__Ending_Balance__c - AcctSeed__Calculated_Ending_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between the cleared balance and the statement ending balance. Should be zero when completed.</inlineHelpText>
    <label>Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>