objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__UnCleared_Deposits__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__UnCleared_Deposits__c</fullName>
    <description>Shall sum the total uncleared cash receipts, bank deposits and debit journal entry lines as of the statement ending date.</description>
    <inlineHelpText>The sum of the uncleared incoming funds (bank) or payments (credit card) as of the statement ending date. This includes all uncleared cash receipts, bank deposits and debit journal entry lines.</inlineHelpText>
    <label>UnCleared Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>