objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__UnCleared_Payments__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__UnCleared_Payments__c</fullName>
    <description>Shall sum the total uncleared cash disbursements and credit journal entry lines as of the statement ending date.</description>
    <inlineHelpText>The sum of the uncleared outgoing funds (bank) or charges (credit card) as of the statement ending date. This includes all uncleared cash disbursements and credit journal entry lines.</inlineHelpText>
    <label>UnCleared Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>