objects/AcctSeed__Bank_Reconciliation2__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Bank_Account__c</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__End_Date__c</columns>
    <columns>AcctSeed__Beginning_Balance__c</columns>
    <columns>AcctSeed__Ending_Balance__c</columns>
    <columns>AcctSeed__Uncleared_Amount__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>